# myGPIOd

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  PROTOCOL.md  README.md  build.sh  compile_time.h.in  openapi.yml
cmake/: CopyConfig.cmake.in  FindLIBGPIOD.cmake  FindLIBMHD.cmake  FindLIBMPDCLIENT.cmake  Install.cmake.in  (+1 more)
libmygpio/: CMakeLists.txt  libmygpio.pc.in
libmygpio/example/: CMakeLists.txt  main.c
libmygpio/include/: libmygpio.h
libmygpio/include/libmygpio/: connection.h  gpio.h  gpio_struct.h  gpioinfo.h  gpiolist.h  idle.h  libmygpio.h  libmygpio_connection.h  libmygpio_gpio.h  libmygpio_gpio_struct.h  libmygpio_gpioinfo.h  libmygpio_gpiolist.h  libmygpio_hook.h  libmygpio_idle.h  libmygpio_parser.h  libmygpio_protocol.h  libmygpio_raspberry_vcio.h  pair.h  parser.h  protocol.h
libmygpio/src/: buffer.c  buffer.h  connection.c  connection.h  gpio.c  gpio.h  gpio_struct.c  gpio_struct.h  gpioinfo.c  gpiolist.c  hook.c  idle.c  idle.h  pair.c  pair.h  parser.c  protocol.c  protocol.h  raspberry_vcio.c  socket.c  socket.h  util.c  util.h
mygpio-common/: CMakeLists.txt  compile_time.h.in  util.c  util.h
mygpioc/: CMakeLists.txt  commands.c  commands.h  compile_time.h.in  gpio.c  gpio.h  hook.c  hook.h  idle.c  idle.h  main.c  options.c  options.h  raspberry_vcio.c  raspberry_vcio.h  util.c  util.h
mygpiod/: CMakeLists.txt  compile_commands.json  main.c  openapi.yml
mygpiod/.cache/clangd/index/: action.c.36D088C97C420EAE.idx  action.c.C0C7E56B11C000B3.idx  action.c.C42DDE01CCB1F37D.idx  action.h.3DC046AC792EAC59.idx  action.h.543A0D8C678D9E16.idx  action.h.6DF8A9F7FE54FB25.idx  chip.c.9F538A88466AD4A0.idx  chip.h.4A3FB417985ADA68.idx  config.c.1056E131F8837839.idx  config.c.4DC40B4A23AFD56E.idx  config.c.BD0DA14A9EB1667D.idx  config.h.0466C7ED274F21CA.idx  config.h.4554CB4C441D20A5.idx  config.h.46E970FCFDADB114.idx  event.c.00D719BE1C5CF2CF.idx  event.c.33CC84F1F6D001A7.idx  event.c.916EDBA7C7A3794C.idx  event.h.11D18E75520C3850.idx  event.h.4184E906CCE8DED7.idx  event.h.7CC96730ACD41EDA.idx  event_loop.c.3A5FF79D902A8E08.idx  event_loop.c.79C64C8E85690332.idx  event_loop.h.2FC09BBE20FCD949.idx  event_loop.h.793CFFF07D17F68F.idx  events.c.ECC298A8B9E9C0AF.idx  events.h.BC521AA10D912F98.idx  gpio.c.0615032D44F2B044.idx  gpio.c.0A347BDF557A81EA.idx  gpio.c.0AC61B51269EEC22.idx  gpio.c.C9F57FEB1543EE3E.idx  gpio.h.0B735C6245C77068.idx  gpio.h.33D932F7E0CB5278.idx  gpio.h.4B79BACD5FD7E48C.idx  gpio.h.CBE61CC8B6BD0B57.idx  idle.c.CDF3867BFB8FC8A6.idx  idle.h.6510869164FECA96.idx  input.c.6F28660B9B32BAD1.idx  input.h.28139A8949553455.idx  list.c.2D35E63C8B71AD6B.idx  list.c.774A32F5AB77C50E.idx  (+50 more)
mygpiod/actions/: actions.c  actions.h  execute.c  execute.h  gpio.c  gpio.h  gpioset.c  gpioset.h  http.c  http.h  lua.c  lua.h  lua_async.c  lua_async.h  lua_sync.c  lua_sync.h  mpc.c  mpc.h  mympd.c  mympd.h  system.c  system.h
mygpiod/config/: config.c  config.h  gpio.c  gpio.h  hook.c  hook.h  input.c  input.h  input_ev.c  input_ev.h  lua_async.c  lua_async.h  timer_ev.c  timer_ev.h
mygpiod/event_loop/: event_loop.c  event_loop.h  eventfd_wrap.c  eventfd_wrap.h  msg_queue.c  msg_queue.h  signal_handler.c  signal_handler.h
mygpiod/gpio/: action.c  action.h  chip.c  chip.h  event.c  event.h  gpio.c  gpio.h  input.c  input.h  output.c  output.h  timer.c  timer.h  util.c  util.h
mygpiod/hook/: action.c  action.h
mygpiod/input/: action.c  action.h  event_code.c  event_code.h  event_type.c  input.c  input.h  input_event.h  input_event_code.c  input_event_code.h  input_event_type.c  input_event_type.h  util.h
mygpiod/input_ev/: action.c  action.h  device.c  device.h  event.c  event.h  event_code.c  event_code.h  event_type.c  event_type.h  input_event.h
mygpiod/lib/: action.c  action.h  config.c  config.h  event_types.h  events.c  events.h  http_client.c  http_client.h  json_print.c  json_print.h  list.c  list.h  log.c  log.h  mem.h  sds_extras.c  sds_extras.h  timer.c  timer.h  util.c  util.h
mygpiod/lua/: functions.c  functions.h  luavm.c  luavm.h  util.c  util.h
mygpiod/lua/async/: bytecode.c  bytecode.h  queue_msg.c  queue_msg.h
mygpiod/lua/async/functions/: gpio.c  gpio.h  http.c  http.h  input_ev.c  input_ev.h  mpc.c  mpc.h  system.c  system.h
mygpiod/lua/functions/: gpio.c  http.c  http.h  input_ev.c  mpc.c  system.c  system.h
mygpiod/lua/sync/: luavm.c  luavm.h
mygpiod/lua/sync/functions/: gpio.c  gpio.h  http.c  http.h  input_ev.c  input_ev.h  mpc.c  mpc.h  system.c  system.h
mygpiod/raspberry/: vcgencmd.c  vcgencmd.h
mygpiod/server/: event.c  event.h  gpio.c  gpio.h  idle.c  idle.h  protocol.c  protocol.h  response.c  response.h  socket.c  socket.h
mygpiod/server_http/: embedded_files.c.in  hook.c  hook.h  httpd.c  httpd.h  rest_api.c  rest_api.h  rest_api_gpio.c  rest_api_gpio.h  rest_api_raspberry.c  rest_api_raspberry.h  rest_api_timerev.c  rest_api_timerev.h  util.c  util.h  websocket.c  websocket.h  webui.c  webui.h
mygpiod/server_socket/: event.c  event.h  gpio.c  gpio.h  hook.c  hook.h  idle.c  idle.h  protocol.c  protocol.h  raspberry.c  raspberry.h  response.c  response.h  socket.c  socket.h  timerev.c  timerev.h
mygpiod/timer_ev/: action.c  action.h  event.c  event.h  timer_ev.c  timer_ev.h
src/: CMakeLists.txt  action.c  action.h  compile_time.h.in  config.c  config.h  config.h.in  event.c  event.h  event_loop.c  event_loop.h  gpio.c  gpio.h  list.c  list.h  log.c  log.h  main.c  server_idle.c  server_idle.h  server_protocol.c  server_protocol.h  server_socket.c  server_socket.h  signal_handler.c  signal_handler.h  timer.c  timer.h  util.c  util.h
src/actions/: system.c
src/event_loop/: event_loop.c  event_loop.h  signal_handler.c
src/gpio/: action.c  action.h  chip.c  chip.h  event.c  event.h  gpio.c  gpio.h  input.c  input.h  output.c  output.h  timer.c  timer.h
src/lib/: config.c  config.h  events.c  events.h  list.c  list.h  log.c  timer.c  timer.h  util.c  util.h
src/server/: gpio.c  gpio.h  idle.c  idle.h  protocol.c  protocol.h  response.c  response.h  socket.c  socket.h
(+88 files in other folders)
